@@ -14,19 +14,22 @@ lazy val root = (project in file("."))
   .settings(
     name := "lab-scala-flink",
     fork := true,
-
     libraryDependencies ++= Seq(
       "org.flinkextended" %% "flink-scala-api-2" % flinkExtendedVer,
-
       "org.apache.flink" % "flink-streaming-java" % flinkVer,
       "org.apache.flink" % "flink-clients" % flinkVer,
-
       "org.apache.flink" % "flink-connector-files" % flinkVer,
       "org.apache.flink" % "flink-csv" % flinkVer,
       "org.apache.flink" % "flink-connector-kafka" % flinkKafkaConectorVer,
-
       "org.apache.flink" % "flink-statebackend-rocksdb" % flinkVer % Provided,
-
+      "org.scala-lang" % "scala-reflect" % scalaVer,
+      "org.slf4j" % "slf4j-api" % "2.0.13",
+      "ch.qos.logback" % "logback-classic" % "1.5.6",
       munit % Test
+    ),
+    dependencyOverrides += "org.scala-lang" % "scala-reflect" % scalaVer,
+    run / javaOptions ++= Seq(
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED"
     )
   )
